fix vendored sdl_gpu include dirs

--- a/meson.build
+++ b/meson.build
@@ -186,6 +186,9 @@ executable(
     dependency('vorbisfile'),
     dependency('zlib'),
   ],
+  include_directories: [
+    '3rdparty/sdl-gpu/include',
+  ],
   link_with: sdl_gpu,
   install: true,
 )
